--- a/css/style.css
+++ b/css/style.css
@@ -1939,6 +1939,237 @@
   margin: 0;
 }
 
+/* CONTENT-PAGE-STYLES */
+
+.content-main__container{
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  font-family: var(--opensans-font-stack);
+  color: var(--heading-color);
+  margin-bottom: 40px;
+}
+.img-wrapper{
+  max-width: 570px;
+  margin-right: 32px;
+}
+.img-wrapper img:not(:last-child){
+  margin-bottom: 32px;
+}
+.content-info__title{
+  font-family: var(--poppins-font-stack);
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 140%;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.customer-review{
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  color: #A9A9A9;
+  display: flex;
+  align-items: center;
+  margin-bottom: 42px;
+}
+.customer-review::before{
+   content: "";
+   width: 108px;
+   height: 20px;
+   background-repeat: no-repeat;
+   background-size: contain;  
+   margin-right: 10px;
+   background-image: url(../img/star4.svg);
+}
+.content-info__text{
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 23px;
+  margin: 0;
+  margin-bottom: 40px;
+}
+.content-list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  line-height: 19px;
+  color: #a9a9a9;
+  margin-bottom: 40px;
+}
+.content-item__ans .content-item__text{
+    color: var(--heading-color);
+}
+.content-item__link{
+  text-decoration: underline;
+}
+.content-card{
+  display: flex;
+  align-items: center;
+  padding: 16px 24px 16px;
+  justify-content: space-between;
+  font-family: var(--poppins-font-stack);
+  background: #FFFFFF;
+  border: 1px solid #F5F5F5;
+  border-radius: 12px;
+  margin-bottom: 24px;
+}
+.content-cost{
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 39px;
+  margin: 0;
+  color: var(--accent-color);
+}
+.content-cost__disc{
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 18px;
+  text-decoration-line: line-through;
+  color: #A9A9A9;
+  margin: 0;
+}
+.content-form{
+  display: flex;
+  align-items: center;
+  padding: 14px 16px;
+  background: #F9F9F9;
+  border: 1px solid #D1D1D1;
+  border-radius: 12px;
+}
+.content-form select{
+  border: none;
+  background-color: transparent;
+}
+.content-form__value{
+   margin: 0;
+   font-family:var(--opensans-font-stack);
+   font-size: 14px;
+   line-height: 19px;
+   color: #a9a9a9;
+   padding-right: 16px;
+   margin-right: 16px;
+   border-right: 1px solid #a9a9a9;
+}
+.content-form__btn{
+  padding: 12px 16px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+}
+.content-form__btn::before{
+  content: "";
+  width: 10px;
+  height: 10px;
+  margin-right: 8px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(../img/plus-white.png);
+}
+.content-link{
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 22px;
+  color: var(--heading-color);
+  font-family: var(--poppins-font-stack);
+  display: flex;
+  align-items: center;
+}
+.content-link::before{
+  content: "";
+  width:14px;
+  height: 14px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-right: 10px;
+}
+.content-link__wrapper{
+  display: flex;
+  align-items: center;
+  margin-bottom: 62px;
+}
+.content-link__wrapper .wishlist{
+  margin-right: 16px;
+}
+.desc-list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  font-family: var(--poppins-font-stack);
+  margin-bottom: 16px;
+}
+.desc-item span{
+  background: #F4F8EC;
+  border-radius: 12px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 18px;
+  color: var(--accent-color);
+  margin-left: 8px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+.light-line{
+  background-color:#F5F5F5;
+  width: 100%;
+  height: 1px;
+  position: relative;
+  margin-bottom: 48px;
+}
+.accent-line{
+  background-color: var(--accent-color);
+  width: 150px;
+  height: 1px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99;
+}
+.desc-info__title{
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  font-family: var(--poppins-font-stack);
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+.desc-info__text{
+  font-family: var(--opensans-font-stack);
+  font-size: 14px;
+  line-height: 19px;
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.tr{
+  border-bottom: 1px solid #777;
+}
+
+td, th {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+
+
 
 
 
@@ -2121,6 +2352,10 @@
     .sidebar-btn__wrapper{
       justify-content: center;
     }
+    .img-wrapper img{
+      width: 400px;
+      height: auto;
+    }
   }
   @media only screen and (max-width:1012px) {
     .more-item{
@@ -2186,6 +2421,10 @@
        position: relative;
        margin-bottom: 20px;
      }
+     .img-wrapper img{
+      width: 350px;
+      height: auto;
+    }
   }
   @media only screen and (max-width:860px){
     .header-main{
@@ -2222,6 +2461,20 @@
       justify-content: center;
     }
     .filter-form .input-wrapper{
+      margin-bottom: 20px;
+    }
+    .content-main__container{
+      flex-direction: column;
+      align-items: center;
+    }
+    .img-wrapper img{
+      width:100%;
+      height: auto;
+    }
+    .img-wrapper{
+      margin-right: 0;
+    }
+    .img-wrapper img:last-child{
       margin-bottom: 20px;
     }
 }
@@ -2482,6 +2735,22 @@
       margin-right: auto;
     }
   }
+  @media only screen and (max-width:490px){
+    .content-card{
+      flex-direction: column;
+      align-items: center;
+    }
+    .content-card div{
+      margin-bottom: 15px;
+    }
+    .content-form{
+      margin-bottom: 15px;
+    }
+    .content-list{
+      flex-direction: column;
+      align-items: center;
+    }
+  }
   @media only screen and (max-width:470px){
     .main-footer__nav{
       flex-direction: column;
@@ -2538,6 +2807,9 @@
     }
     .form__section{
       margin-right: 0;
+    }
+    .accent-line{
+      width: 100px;
     }
   }
   @media only screen and (max-width:420px){
